// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventorySubscriptions Component should handle updating sorting through redux state: dispatch filter 1`] = `
Array [
  Array [
    Array [
      Object {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "product_name",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dir": "desc",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "product_name",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "product_name",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventorySubscriptions Component should handle variations in data: filtered data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Connect(Pagination)
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              Object {
                "title": "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
                "transforms": Array [],
              },
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  Object {
                    "title": "ipsum",
                  },
                ],
              },
              Object {
                "cells": Array [
                  Object {
                    "title": "sit",
                  },
                ],
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Connect(Pagination)
          dropDirection="up"
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventorySubscriptions Component should handle variations in data: variable data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Connect(Pagination)
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
              "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  "ipsum",
                  "sit",
                ],
              },
              Object {
                "cells": Array [
                  "sit",
                  "amet",
                ],
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Connect(Pagination)
          dropDirection="up"
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventorySubscriptions Component should render a non-connected component: non-connected 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Connect(Pagination)
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={Array []}
          isHeader={true}
          rows={Array []}
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Connect(Pagination)
          dropDirection="up"
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit"
          offsetType="SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          viewId="subscriptionsList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventorySubscriptions Component should return an empty render when disabled: disabled component 1`] = `""`;
